[package]
name = "converter"
version = "0.1.0"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "1"
